--- a/roles/db/tasks/main.yaml
+++ b/roles/db/tasks/main.yaml
@@ -35,4 +35,4 @@
 
 - name: setup root password
   ansible.builtin.command: "mysql_secure_installation --set-root-pass {{PASSWORD}}"
-  when: mysql_connection_output.failed is true
+  #when: mysql_connection_output.failed is true
