--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -46,8 +46,7 @@
 - name: Copy backend service
   ansible.builtin.template:
     src: backend.service.j2
-    dest: /etc/systemd/system/backend.service
-    remote_src: yes
+    dest: /etc/systemd/system/backend.service.j2
 
 - name: install python mysql dependencies
   ansible.builtin.pip:
