--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -46,7 +46,7 @@
 - name: Copy backend service
   ansible.builtin.template:
     src: backend.service.j2
-    dest: /etc/systemd/system/backend.service.j2
+    dest: /etc/systemd/system/backend.service
 
 - name: install python mysql dependencies
   ansible.builtin.pip:
