--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -58,18 +58,18 @@
 - name: import data into mysql
   community.mysql.mysql_db:
     login_user: "{{login_user}}"
-    target: /app/schema/backend.sql
-    login_password: "{{PASSWORD}}"
-    login_host: "{{login_host}}"
-    name: all
-    state: import
+    # target: /app/schema/backend.sql
+    # login_password: "{{PASSWORD}}"
+    # login_host: "{{login_host}}"
+    # name: all
+    # state: import
 
-- name: daemon reload 
-  ansible.builtin.systemd_service:
-    daemon_reload: true
+# - name: daemon reload 
+#   ansible.builtin.systemd_service:
+#     daemon_reload: true
 
-- name: start and enable backend service
-  ansible.builtin.service:
-    name: backend
-    state: started
-    enabled: yes
+# - name: start and enable backend service
+#   ansible.builtin.service:
+#     name: backend
+#     state: started
+#     enabled: yes
