--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -59,10 +59,10 @@
   community.mysql.mysql_db:
     login_user: "{{login_user}}"
     name: all
+    state: import
     # target: /app/schema/backend.sql
     # login_password: "{{PASSWORD}}"
     # login_host: "{{login_host}}"
-    # state: import
 
 # - name: daemon reload 
 #   ansible.builtin.systemd_service:
