--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -61,8 +61,8 @@
     name: all
     state: import
     target: /app/schema/backend.sql
-    # login_password: "{{PASSWORD}}"
-    # login_host: "{{login_host}}"
+    login_password: "{{PASSWORD}}"
+    login_host: "{{login_host}}"
 
 # - name: daemon reload 
 #   ansible.builtin.systemd_service:
