--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -64,12 +64,12 @@
     login_password: "{{PASSWORD}}"
     login_host: "{{login_host}}"
 
-# - name: daemon reload 
-#   ansible.builtin.systemd_service:
-#     daemon_reload: true
+- name: daemon reload 
+  ansible.builtin.systemd_service:
+    daemon_reload: true
 
-# - name: start and enable backend service
-#   ansible.builtin.service:
-#     name: backend
-#     state: started
-#     enabled: yes
+- name: start and enable backend service
+  ansible.builtin.service:
+    name: backend
+    state: started
+    enabled: yes
