--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -45,7 +45,7 @@
 
 - name: Copy backend service
   ansible.builtin.template:
-    src: backend.service.j2
+    src: backend.service
     dest: /etc/systemd/system/backend.service
 
 - name: install python mysql dependencies
