--- a/roles/db/tasks/main.yaml
+++ b/roles/db/tasks/main.yaml
@@ -3,12 +3,7 @@
     name: mysql-server
     state: latest
 
-- name: Start MySQL server
-  ansible.builtin.service:
-    name: mysqld
-    enabled: yes
-
-- name: Enable MySQL server
+- name: Start and enable MySQL server
   ansible.builtin.service:
     name: mysqld
     enabled: yes
