--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -1,4 +1,4 @@
 login_user: root
-login_host: db.daws78s.xyz
+login_host: db1.daws78s.xyz
 PASSWORD: ExpenseApp@1
-HOST_NAME: db.daws78s.xyz
+HOST_NAME: db1.daws78s.xyz
