--- a/roles/backend/tasks/main.yaml
+++ b/roles/backend/tasks/main.yaml
@@ -18,22 +18,30 @@
     name: expense
 
 - name: create app directory
+  tags:
+  - deployment
   ansible.builtin.file:
     path: /app
     state: directory
 
 - name: Download backend code
+  tags:
+  - deployment
   ansible.builtin.get_url:
     url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-backend-v2.zip
     dest: /tmp/backend.zip
 
 - name: Unzip backend code
+  tags:
+  - deployment
   ansible.builtin.unarchive:
     src: /tmp/backend.zip
     dest: /app
     remote_src: yes
 
 - name: Install npm dependencies
+  tags:
+  - deployment
   community.general.npm:
     name: backend
     path: /app/npm install
@@ -69,7 +77,9 @@
     daemon_reload: true
 
 - name: start and enable backend service
+  tags:
+  - deployment
   ansible.builtin.service:
     name: backend
-    state: started
+    state: restarted
     enabled: yes
