--- a/frontend.yaml
+++ b/frontend.yaml
@@ -1,5 +1,8 @@
 - name: configure Frontend server
-  hosts: frontend
+  hosts: localhost #frontend
+  connection: local
+  vars_files:
+  - variables-prod.yaml
   become: yes
   roles:
   - frontend
